--- a/src/exercises/2.1.css
+++ b/src/exercises/2.1.css
@@ -1,9 +1,3 @@
-/* Never ever do this 🥺
- 💡 Delete this declaration! */
-*:focus {
-  outline: none;
-}
-
 /* ------- BUTTON -------  */
 
 .c-btn {
@@ -30,6 +24,15 @@
   box-shadow: var(--theme-focus_shadow);
 */
 
+.c-btnPrimary:focus {
+  outline: none;
+}
+
+.c-btnPrimary:focus-visible {
+  outline: none;
+  box-shadow: var(--theme-focus_shadow);
+}
+
 /* ------- LINK -------  */
 
 .c-link {
@@ -45,6 +48,14 @@
 
 /* 💡 Add link focus styles here
 - You could change the background or add a border (shadow) */
+
+.c-link:focus {
+  outline: none;
+}
+
+.c-link:focus-visible {
+  box-shadow: var(--theme-focus_shadow);
+}
 
 /* ------- TEXT INPUT -------  */
 
@@ -76,7 +87,11 @@
 
 /* 💡 Improve the focus indicator with something more visible */
 .textInput:focus {
-  /* ... */
+  outline: none;
+}
+
+.textInput:focus-visible {
+  box-shadow: var(--theme-focus_shadow);
 }
 
 /* ----- */
@@ -110,6 +125,7 @@
 
 /* 💡 The hover indicator has enough contrast,
 so the focus can be exactly the same */
+.c-btnCorner:focus .c-btnCorner-area,
 .c-btnCorner-area:hover {
   background-color: var(--theme-primary);
   color: var(--theme-bg_0);
